infraestrucuture/kong/operator/kong-gateway-status-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway-status
  namespace: kong
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  ports:
  - name: metrics
    port: 8100
    targetPort: 8100
  type: ClusterIP
